Separated admin/guest display elements, display elements conditions for different action combinations, sticky admin-console, fixed footer and content overlapping

--- a/src/app/admin-console/admin-console.component.less
+++ b/src/app/admin-console/admin-console.component.less
@@ -1,5 +1,8 @@
-.container {
-    float: right;
+.container {    
+    position: fixed;
+    top: 3%;
+    right: 3%;
+    width: 20%;
 }
 
 .admin-console {
