--- a/src/app/quiz-builder/quiz-builder.component.less
+++ b/src/app/quiz-builder/quiz-builder.component.less
@@ -5,6 +5,10 @@
     text-shadow: -2px -2px #B5DFB7;
 }
 
+.question-container {
+    padding-bottom: 100px;
+}
+
 .small {
     width: 14px;
     height: 14px;
