--- a/src/app/room/room.component.less
+++ b/src/app/room/room.component.less
@@ -10,6 +10,10 @@
     left: -68%;
 }
 
+.question-container {
+    padding-bottom: 100px;
+}
+
 .question-percentage {
     float: right;
     font-weight: normal;
