--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,5 @@
 html {
-    background-color: #4CAF5021 ;
+    background-color: #E7F4E8;
     color: #4CAF50;
 }
 
@@ -40,10 +40,13 @@ input[type='checkbox'] {
 /* icon buttons */
 .button-row {
     position: fixed;
-    bottom: 5%;
+    bottom: 0;
     width: 100%;
     display: flex;
     justify-content: center;
+
+    background-color: #E7F4E8;
+    padding: 20px 0 30px 0;
 }
 
 .button-icon {
